# EKRS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EKRS-RAG-AI_intergration.md  EKRS-V3.0-gstack-review-report.md  EKRS-V3.0-impact-assessment.md  EKRS-stage-design.md  Makefile  README.md  ekrs-handbook.md  ekrs.md
rag/: .gitignore  Dockerfile  pyproject.toml
rag/ekrs_rag/: cli.py  main.py  security_legacy.py
rag/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_38baee83df8e27f3___init___py.html  z_3c6b077a082ab5d1___init___py.html  z_3c6b077a082ab5d1_chunker_py.html  z_3c6b077a082ab5d1_ir_parser_py.html  z_3c6b077a082ab5d1_numeric_hint_extractor_py.html  z_3c6b077a082ab5d1_pipeline_py.html  z_4cf5c700d395b9c3___init___py.html  z_4cf5c700d395b9c3_config_py.html  z_4cf5c700d395b9c3_logging_py.html  z_ac2c024edd0cb846___init___py.html  z_ac2c024edd0cb846_context_manager_py.html  z_c03279e79d66c8fc___init___py.html  z_c03279e79d66c8fc_embedder_py.html  z_c03279e79d66c8fc_qdrant_client_py.html  z_c03279e79d66c8fc_retriever_py.html  z_cfea4f07473664ef___init___py.html  z_cfea4f07473664ef_constraints_py.html  z_cfea4f07473664ef_ingestion_py.html  z_cfea4f07473664ef_metrics_py.html  z_efdc706c6b1d2240___init___py.html  z_efdc706c6b1d2240_evidence_builder_py.html  z_efdc706c6b1d2240_normalizer_py.html  z_efdc706c6b1d2240_parser_py.html  z_efdc706c6b1d2240_solver_py.html  z_fd28c7290a852953___init___py.html  z_fd28c7290a852953_cli_py.html  z_fd28c7290a852953_main_py.html
rag/tests/: conftest.py
shared/: pyproject.toml
(+273 files in other folders)
