[project]
name = "ekrs-rag"
version = "0.1.0"
description = "EKRS RAG service — ingestion, retrieval, constraint solving"
requires-python = ">=3.11"
dependencies = [
    "ekrs-shared",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "qdrant-client>=1.11",
    "redis>=5.0",
    "aiosqlite",
    "tenacity>=8.2",
    "python-json-logger>=2.0",
    "prometheus-client>=0.20",
    "httpx",
    "pydantic-settings>=2.0",
    # Phase 6B — bge-m3 embedding (D2)
    "FlagEmbedding==1.2.13",
    "onnxruntime>=1.15.0,<1.18.0",
    "numpy>=1.24.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ekrs_rag*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "httpx",  # for TestClient async
    "fakeredis>=2.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
