[project]
name = "ekrs-shared"
version = "0.1.0"
description = "EKRS shared models, normalizer, and utilities"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "portion",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ekrs_shared*"]
